* Fixed: Post ID browser modal window not closing in admin when selecting post.
* Fixed: Social contact icons not showing in correct color on transparent header in some cases, with Super User and Executive theme bases.
* Fixed: "Blank Page" template not displaying correctly with white background on Agent base.
* Removed: Header background options were simplified a bit for Super User, Executive and Entrepreneur theme bases; there are no more background parallax, slideshow or video options.
* Removed: No more "Background Color Brightness" option at *Appearance > Theme Options > Styles > Mobile Header*; use new "Icon Color" option instead.
* Removed: No more support for thumbnail borders; the filter `themeblvd_featured_thumb_frame` has been removed. Use CSS customization instead.
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* Removed: No more html5shiv for HTML5 compatibility with IE8.
* Removed: No more "Dark" site-wide content style.
* Removed: The long-time deprecated "featured" areas (as of framework 2.5), using `themeblvd_featured_*` action hooks have been completely removed.
* Updated: FontAwesome to 5.0.1.
* Updated: Chart.js to 2.7.1.
* Updated: easyPieChart to 2.1.6.
* Updated: Isotope to 3.0.4.
* Updated: Magnific Popup to 1.1.0.
* Updated: Bootstrap to 3.3.7.

--------------------------------------------------------------

2.1.14 - 11/08/2017
-------------------

* **Updated Theme Blvd framework to 2.6.13**
* Improvement: Better consistency loading background video from YouTube and Vimeo.
* Improvement: Include all frontend functionality generally for better compatibility for third-party plugins that may be incorporating frontend components within the admin panel.
* Improvement: Added filter `themeblvd_editor_settings`, applied to settings passed to framework instances of `wp_editor()`.

--------------------------------------------------------------

2.1.13 - 09/19/2017
-------------------
